2005-12-13  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>

	* configure.in: Added "te" to ALL_LINGUAS.

2005-11-14  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.2 release

2005-11-14  Rodney Dawes  <dobey@novell.com>

	* */mimetypes/Makefile.am: Remove specific video type icons
	
	* */mimetypes/gnome-mime-video-*.*: Removed these specific video type
	icons so that we only have the generic video icon

2005-10-24  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.0 release

2005-10-24  Jakub Steiner <jimmac@ximian.com>

	* gnome-mime-image: fixups

2005-10-24  Rodney Dawes  <dobey@novell.com>

	* 48x48/mimetypes/Makefile.am: Removed the svg+xml symlink bit
	in the install-data-local rule

2005-10-24  Rodney Dawes  <dobey@novell.com>

	* */mimetypes/Makefile.am: Remove specific image type icons
	
	* */mimetypes/gnome-mime-image-*.*: Removed these specific image type
	icons so that we only have the generic image icon

2005-10-22  Jakub Steiner <jimmac@ximian.com>

	* gnome-mime-application-x-ruby.png: based on artwork by Geoff
	  Young. Fixes bug # 317102
	
2005-10-03  Rodney Dawes  <dobey@novell.com>
	
	* NEWS:
	* configure.in: Update for 2.12.1 release

2005-10-02  Stanislav Brabec <sbrabec@suse.cz>

	* Makefile.am: Install gnome-icon-theme.pc to $(datadir)/pkgconfig
	
	* configure.in: Require pkg-config 0.19 for bug fixes and support for
	installing pc files into $(datadir)/pkgconfig

	* gnome-icon-theme.pc.in: Remove all the path variables as we don't
	need theme for gnome-icon-theme since implementations should follow
	the Icon Theme specification, and we don't install libraries or headers

	Fixes #316200

2005-10-02  Stanislav Brabec <sbrabec@suse.cz>

	* 16x16/stock/io/Makefile.am:
	* 16x16/stock/net/Makefile.am:
	* 24x24/stock/io/Makefile.am:
	* 24x24/stock/net/Makefile.am:
	* 48x48/mimetypes/Makefile.am:
	Replace $(INSTALL) with $(INSTALL_DATA) so that the installed icons
	are not flagged as executable
