@@ -1,3 +1,10 @@
+2005-12-22  Rodney Dawes  <dobey@novell.com>
+
+	* index.theme.in: Fix filesystems and mimetypes at 48x48 size to be
+	Fixed instead of Scalable (probable fix for bug #315841)
+	Change minimum size of scalable directories to 32, so that we don't
+	scale the images down too far, for weird smaller sizes
+
 2005-12-13  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* configure.in: Added "te" to ALL_LINGUAS.
